--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link rel="icon" type="image/png" href="http://imgur.com/CILKGax.png">
+		<link rel="icon" type="image/png" href="https://i.imgur.com/DkSNyRz.png">
 		<title> Quỳnh Như </title>	    
         <link type="text/css" rel="stylesheet" href="./qd/default.css">
 		<script type="text/javascript" src="./qd/jquery.min.js"></script>
@@ -24,8 +24,12 @@
 			        <div id="code">
 									
 			      <font color="#3500ff"><span class="say">Chào người con gái anh yêu,</span><br>
-						<span class="say">Em có nhớ chúng ta yêu nhau được bao nhiêu ngày không ?</span><br>
-						<span class="say">Anh thì nhớ rất rõ đấy.</span><br>
+				      		<span class="say">Em có nhớ chúng ta quen nhau từ đâu không ?</span><br>
+				      		<span class="say">Quen nhau từ một hộp sushi mà anh lại là người giao cho em ?</span><br>
+						<span class="say"> Và Chính từ lần giao hàng đấy mà ta lại quen nhau như bây giờ ?</span><br>
+						<span class="say">Anh cứ nghĩ là ông trời đã đặt để cho bé và anh gặp nhau.</span><br>
+				      		span class="say">Có thể xung quanh anh sẽ có rất nhiều cô gái.</span><br>
+						span class="say">Nhưng người anh được phép chọn lại là EM ♥ .</span><br>
 						<span class="say"> </span><br>
 						<span class="say">Người ta nói bệnh nào cũng có thuốc chữa</span><br>
 						<span class="say">Anh đã không tin điều đó nữa đến khi anh gặp em</span><br>
