--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 				      		<span class="say">Quen nhau từ một hộp sushi mà anh lại là người giao cho em ?</span><br>
 						<span class="say"> Và Chính từ lần giao hàng đấy mà ta lại quen nhau như bây giờ ?</span><br>
 						<span class="say">Anh cứ nghĩ là ông trời đã đặt để cho bé và anh gặp nhau.</span><br>
-				      		span class="say">Có thể xung quanh anh sẽ có rất nhiều cô gái.</span><br>
-						span class="say">Nhưng người anh được phép chọn lại là EM ♥ .</span><br>
+				      		<span class="say">Có thể xung quanh anh sẽ có rất nhiều cô gái.</span><br>
+						<span class="say">Nhưng người anh được phép chọn lại là EM ♥ .</span><br>
 						<span class="say"> </span><br>
 						<span class="say">Người ta nói bệnh nào cũng có thuốc chữa</span><br>
 						<span class="say">Anh đã không tin điều đó nữa đến khi anh gặp em</span><br>
@@ -39,7 +39,7 @@
 						<span class="say">Đó là bệnh yêu em quá nhiều</span><br>
 						<span class="say">Yêu em cho đến khi nào anh không còn tồn tại <3</span><br>
 						<span class="say">Hãy cứ tin em nhé.</span><br>
-						<span class="say"> </span><br> <br> <Br></Br>
+						<span class="say"> </span><br>  <Br></Br>
 
                         <span class="say"><span class="space"></span>-- Anh yêu Em --</span> <br>
                        <span class="say"><span class="space"></span>  Quỳnh Như  </span> <br>
